--- a/index.html
+++ b/index.html
@@ -1,20 +1,18 @@
-<h1>Rubrik</h1>
-<p>Text</p>
-<a href="https://github.com/FranciscoLunderquist">Länk till github konto</a>
-<b>Fet stilad text</b>
-<br>
-<p>Ny rad</p>
-<br>
-<ul>
-	<li>Onumerad 1</li>
-	<li>Onumerad 2</li>
-	<li>Onumerad 3</li>
-</ul>
-<ol>
-	<li>Numerad 1</li>
-	<li>Numerad 2</li>
-	<li>Numerad 3</li>
-</ol>
-<p>Vanlig text <mark>Markerad text</mark></p>
-<!-- Kommentar -->
-<link href="styles/style.css" rel="stylesheet">
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Titel</title>
+</head>
+<body>
+    text
+    <p><strong>text</strong><br> i <em><br> paragraf </em></p>
+    <h1>Rubrik</h1>
+    <img src="bilder/github.png">
+    <br>
+    <a href="https://github.com/">github</a>
+    <hr>
+    <div id="1">text</div>
+    <div id="2">text</div>
+    <table><tr>rad 1 <td>ruta 1 </td></tr><tr>rad 2</tr></table>
+</body>
+</html>
