--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     text
-    <p><strong>text</strong><br> i <em><br> paragraf </em></p>
+    <p><strong>txt</strong><br> i <em><br> paragraf </em></p>
     <h1>Rubrik</h1>
     <img src="bilder/github.png">
     <br>
