--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
     <h1>Rubrik</h1>
     <img src="bilder/github.png">
     <br>
-    <a href="https://github.com/">github</a>
+    <a href="https://github.com/">Github</a>
     <hr>
-    <div id="1">text</div>
-    <div id="2">text</div>
-    <table><tr>rad 1 <td>ruta 1 </td></tr><tr>rad 2</tr></table>
+    <table><tr> Rad 1 <td>text</td></tr></table>
 </body>
 </html>
