--- a/index.html
+++ b/index.html
@@ -2,15 +2,19 @@
 <html>
 <head>
 	<title>Titel</title>
+	<link href="stilar.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     text
-    <p><strong>text</strong><br> i <em><br> paragraf </em></p>
-    <h1>Rubrik</h1>
+    <p><strong>text</strong> i <em> paragraf </em></p>
+    <div class="del1"><h1>Rubrik</h1></div>
     <img src="bilder/github.png">
     <br>
     <a href="https://github.com/">Github</a>
+    <div class="del1">text</div>
     <hr>
-    <table><tr> Rad 1 <td>text</td></tr></table>
+    <div class="del2">
+    	<table><tr> Rad 1 </tr></table>
+    </div>
 </body>
 </html>
