--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <img src="bilder/github.png">
     <br>
     <a href="https://github.com/">Github</a>
-    <div class="del1">text</div>
+    <div class="del1"><p>text</p></div>
     <hr>
     <div class="del2">
     	<table><tr> Rad 1 </tr></table>
